# needle

./: CHANGELOG.md  Cargo.toml  README.md  dev-gui.sh  release-notes.md
.github/workflows/: beta-release.yml  nightly-release.yml  package-binaries.yml  package-gui-arm64.yml  release.yml
ndl/src/: main.rs
ndl/tests/: cli_integration.rs
needle-core/examples/: bench.rs  profile.rs
needle-core/src/: index.rs  walker.rs
needle-core/src/index/: tests.rs
needle-core/src/opts/: tests.rs
needle-core/tests/: workspace_smoke.rs
needled/src/: main.rs
needled/tests/: daemon_lifecycle.rs
scripts/: bench.sh  perf.sh
scripts/release/: package-artifacts.sh  publish-crates.sh  set-version.sh
toge/: Cargo.toml
toge-core/: Cargo.toml
toge-core/src/: walker.rs
toge-core/src/sys/: fanotify.rs  tests.rs
toge-core/src/walker/: tests.rs
toge-gui/: package-lock.json  package.json
toge-gui/src/: main.ts
toge-gui/src-tauri/: Cargo.toml  tauri.conf.json
toge-gui/src-tauri/icons/: icon.icns
toge-gui/src-tauri/src/: commands.rs  global_hotkeys.rs  keyboard.rs  lib.rs  state.rs  tray.rs
toge-gui/src/components/: OptionsWindow.svelte  ResultTable.svelte  SearchBar.svelte  StatusBar.svelte
toge-gui/src/lib/: keyboardStore.svelte.ts  searchStore.svelte.ts  searchStore.ts  types.ts
toge-gui/tests/components/: OptionsWindow.test.ts  ResultTable.test.ts  SearchBar.test.ts  StatusBar.test.ts
toge-gui/tests/stores/: keyboardStore.test.ts  (+1 more)
toge/src/: main.rs  tests.rs
toged/: Cargo.toml
toged/src/: main.rs  tests.rs
toged/tests/: daemon_lifecycle.rs
